# fastapi-starter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: production-deployment.yml  staging-deployment.yml
app/: main.py
app/core/: settings.py
