[project]
name = "fastapi-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "aiohttp>=3.12.15",
    "black>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "openapi-generator-cli>=7.14.0",
    "pip>=25.2",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]
