[project]
name = "fastapi-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "aiohttp>=3.12.15",
    "black>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "openapi-generator-cli>=7.14.0",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyright>=1.1.403",
    "uvicorn>=0.35.0",
]
